--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -155,4 +155,5 @@ bExplicitCanvasChildZOrder=True
 MinSDKVersion=21
 PackageName=com.dfbgdg.[PROJECT]
 Orientation=Portrait
+bPackageDataInsideApk=True
 
